style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}

input[type=range] {
    /*removes default webkit styles*/
    -webkit-appearance: none;
    
    /*fix for FF unable to apply focus style bug */
    border: 1px solid white;
    
    /*required for proper track sizing in FF*/
    width: 200px;
}
input[type=range]::-webkit-slider-runnable-track {
    width: 200px;
    height: 5px;
    background: #ddd;
    border: none;
    border-radius: 3px;
}
input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    border: none;
    height: 16px;
    width: 16px;
    border-radius: 50%;
    background: #AAB8C2;
    margin-top: -4px;
}
input[type=range]:focus {
    outline: none;
}
input[type=range]:focus::-webkit-slider-runnable-track {
    background: #ccc;
}

input[type=range]::-moz-range-track {
    width: 200px;
    height: 5px;
    background: #ddd;
    border: none;
    border-radius: 3px;
}
input[type=range]::-moz-range-thumb {
    border: none;
    height: 16px;
    width: 16px;
    border-radius: 50%;
    border:1px solid #bcc5d1;
    background: #AAB8C2;
}

/*hide the outline behind the border*/
input[type=range]:-moz-focusring{
    outline: 1px solid white;
    outline-offset: -1px;
}

input[type=range]::-ms-track {
    width: 200px;
    height: 5px;
    
    /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
    background: transparent;
    
    /*leave room for the larger thumb to overflow with a transparent border */
    border-color: transparent;
    border-width: 6px 0;

    /*remove default tick marks*/
    color: transparent;
}
input[type=range]::-ms-fill-lower {
    background: #777;
    border-radius: 10px;
}
input[type=range]::-ms-fill-upper {
    background: #ddd;
    border-radius: 10px;
}
input[type=range]::-ms-thumb {
    border: none;
    height: 16px;
    width: 16px;
    border-radius: 50%;
    border:1px solid #bcc5d1;
    background: #D1E3EF;
}
input[type=range]:focus::-ms-fill-lower {
    background: #888;
}
input[type=range]:focus::-ms-fill-upper {
    background: #ccc;
}
#controls {
    display: inline-block;
    width: 500px;
}
#buttons {
    margin-top: 5px;
    float: right;
    display: inline-block;
    width: 250px;
}

/*------------main styles--------------*/

body {
    padding-top: 20px;
    padding-left: 15px;
    font-family: Arial, Helvetica, sans-serif;
    width:750px;
    margin-left:auto;
    margin-right:auto;
}

p {
    font-size: .8em;
}

.title {
    font-size: 2em;
}

/*chart styles*/
.axis path,
.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}
/*style sheet style for circles*/
.dot {
    opacity: .5;
}

/*button styles*/
button {
    -moz-box-shadow: 0px 0px 0px 0px #bee2f9;
    -webkit-box-shadow: 0px 0px 0px 0px #bee2f9;
    box-shadow: 0px 0px 0px 0px #bee2f9;
    background-color:#E5EEEF;
    -moz-border-radius:6px;
    -webkit-border-radius:6px;
    border-radius:6px;
    border:1px solid #bcc5d1;
    display:inline-block;
    cursor:pointer;
    color:#000000;
    font-family:Arial;
    font-size:12px;
    padding:12px 8px;
    text-decoration:none;
    float: right;
    width: 70px;
    margin-left: 5px
}
button:hover {
    background-color:#D1E3EF;
}
button:active {
    position:relative;
    top:1px;
}
button:focus {
  outline: none;
}

.filterbox {
    margin-bottom: 5px;
    margin-top: 5px;
}

/*tooltip styles*/
.theTip {
    position: absolute;
    text-align: center;
    opacity: 0;
    font: 16px helvetica;
    color: #2A2B2B;
    line-height: 18px;
    width: 200px;
    height: auto;
    padding: 10px;
    padding-top: 12px;
    background-color: #FFFFF1;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 6px;
    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
    pointer-events: none;
}

.backgroud{
    pointer-events: none;
    font-size: 25px;
}

.header {
    font-weight: 800;
}
.snps {
    color: red;
}
.study {
    font-family: serif;
    font-size: 14px;
}


/*style side label*/
.largeLable {
    width: 200px;
    height: auto;
    padding: 10px;
    font-size: .8em; 
    background-color: #FFFFF7;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 6px;
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);    
}

.fineprint{
    font-size: 10px;
    font-style: italic;
    color: #444;    
}

